--- a/adventureGameV2/AdventureGame/src/App.fsproj
+++ b/adventureGameV2/AdventureGame/src/App.fsproj
@@ -4,6 +4,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="type.fs" />
+    <Compile Include="keyboard.fs" />
+    <Compile Include="movement.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Fable.Browser.Dom" Version="1.1.0" />
