--- a/adventureGameV2/AdventureGame/package.json
+++ b/adventureGameV2/AdventureGame/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.8.4",
     "fable-compiler": "^2.4.15",
     "fable-loader": "^2.1.8",
+    "fable-powerpack": "0.0.20",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "webpack": "^4.41.6",
