--- a/adventureGameV2/AdventureGame/src/App.fsproj
+++ b/adventureGameV2/AdventureGame/src/App.fsproj
@@ -11,5 +11,6 @@
     <PackageReference Include="Fable.Browser.Dom" Version="1.1.0" />
     <PackageReference Include="Fable.Core" Version="3.1.5" />
     <PackageReference Include="Elmish" Version="4.0.0-alpha-1" />
+    <PackageReference Include="Fable.Promise" Version="2.1.0" />
   </ItemGroup>
 </Project>
