sort of level fixes

--- a/adventureGameV2/AdventureGame/src/App.fsproj
+++ b/adventureGameV2/AdventureGame/src/App.fsproj
@@ -2,12 +2,14 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <ItemGroup>
+  <ItemGroup> 
     <Compile Include="type.fs" />
     <Compile Include="keyboard.fs" />
     <Compile Include="room1.fs" />
     <Compile Include="room2.fs" />
-    <Compile Include="level1.fs" />
+    <Compile Include="room3.fs" />
+    <Compile Include="room4.fs" />
+    <Compile Include="allRooms.fs" />
     <Compile Include="main.fs" />
   </ItemGroup>
   <ItemGroup>
