--- a/adventureGameV2/AdventureGame/src/App.fsproj
+++ b/adventureGameV2/AdventureGame/src/App.fsproj
@@ -5,6 +5,7 @@
   <ItemGroup> 
     <Compile Include="type.fs" />
     <Compile Include="keyboard.fs" />
+    <Compile Include="render.fs" />
     <Compile Include="room1.fs" />
     <Compile Include="room2.fs" />
     <Compile Include="room3.fs" />
