--- a/adventureGameV2/AdventureGame/adventuregame.tests/adventuregame.tests.fsproj
+++ b/adventureGameV2/AdventureGame/adventuregame.tests/adventuregame.tests.fsproj
@@ -1,25 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
-    <IsPackable>false</IsPackable>
-    <GenerateProgramFile>false</GenerateProgramFile>
+   <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" /> 
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="Fable.Mocha" Version="1.0.0" />
+    <ProjectReference Include="..\src\App.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Include="UnitTest1.fs" />
-    <Compile Include="Program.fs" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\src\App.fsproj" />
-  </ItemGroup>
+
 
 </Project>
