--- a/adventureGameV2/AdventureGame/adventuregame.tests/adventuregame.tests.fsproj
+++ b/adventureGameV2/AdventureGame/adventuregame.tests/adventuregame.tests.fsproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Fable.Mocha" Version="1.0.0" />
     <ProjectReference Include="..\src\App.fsproj" />
+     <PackageReference Include="Fable.Browser.Dom" Version="1.1.0" />
+    <PackageReference Include="Fable.Core" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
