--- a/adventureGameV2/AdventureGame/adventuregame.tests/adventuregame.tests.fsproj
+++ b/adventureGameV2/AdventureGame/adventuregame.tests/adventuregame.tests.fsproj
@@ -1,20 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-   <PropertyGroup>
+  <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Fable.Mocha" Version="1.0.0" />
-    <ProjectReference Include="..\src\App.fsproj" />
-     <PackageReference Include="Fable.Browser.Dom" Version="1.1.0" />
-    <PackageReference Include="Fable.Core" Version="3.1.5" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <Compile Include="TypeTest.fs" />
+    <Compile Include="KeyboardTest.fs" />
+    <Compile Include="MainTest.fs" />
     <Compile Include="UnitTest1.fs" />
   </ItemGroup>
-
-
-
+  <ItemGroup>
+    <PackageReference Include="Fable.Mocha" Version="1.0.0" />
+    <PackageReference Include="Fable.Browser.Dom" Version="1.1.0" />
+    <PackageReference Include="Fable.Core" Version="3.1.5" />
+  </ItemGroup>
 </Project>
